# Sinaps

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: sinaps.hpp
include/sinaps/: extras.hpp  lexer.hpp  parser.hpp  platform.hpp
src/: lexer.cpp  parser.cpp  platform.cpp  sinaps.cpp
